[package]
name = "mitm-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1.9"
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"
winreg = "0.50"
rcgen = { version = "0.11" }
rustls = "0.21"
webpki = "0.22"
rustls-pemfile = "1.0"
dirs = "5.0"
httparse = "1.8"
local-ip-address = "0.5"

[build-dependencies]
slint-build = "1.0"