[package]
name = "mitm-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1.9"
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"
winreg = "0.50"
dirs = "5.0"
httparse = "1.8"
local-ip-address = "0.5"
hudsucker = { version = "0.23", features = ["openssl-ca"] }
http = "0.2"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-tungstenite = "0.20"
rustls = "0.21"
rustls-native-certs = "0.6"
openssl = "0.10"

[build-dependencies]
slint-build = "1.0"